# Paperset

./: README.md  com.sebtech.paperset.desktop  main.c  meson.build
data/: com.sebtech.paperset.desktop
src/: main.c
